tests/spec/emit/snapshots/map_from_numeric_keys_keeps_prelude_call.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Map<int, int> {
    Map.from([(65, 1), ('A', 2)])
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() map[int]int {
	return lisette.MapFrom([]lisette.Tuple2[int, int]{
		lisette.MakeTuple2[int, int](65, 1),
		lisette.MakeTuple2[int, int]('A', 2),
	})
}
