tests/spec/emit/snapshots/map_from_pairs.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Map<string, int> {
    Map.from([("alice", 95), ("bob", 82)])
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() map[string]int {
	return lisette.MapFrom([]lisette.Tuple2[string, int]{
		lisette.MakeTuple2[string, int]("alice", 95),
		lisette.MakeTuple2[string, int]("bob", 82),
	})
}
