tests/spec/emit/snapshots/map_from_pairs_with_unknown_value.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() {
    let m = Map.from<string, Unknown>([("one", "two")])
    if m.length() != 1 {
      panic("Map.from lost its entry when widening values to Unknown")
    }
  }
---
package main

func test() {
	m := map[string]any{"one": "two"}
	if len(m) != 1 {
		panic("Map.from lost its entry when widening values to Unknown")
	}
}
