tests/spec/emit/snapshots/map_get.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(m: Map<string, int>, key: string) -> Option<int> {
    m.get(key)
  }
---
package main

func test(m map[string]int, key string) (int, bool) {
	ret, ok := m[key]
	return ret, ok
}
