tests/spec/emit/snapshots/map_get_let_else_shadow_outer_visible_in_else.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(m: Map<string, string>, x: int) -> string {
    let Some(x) = m.get("a") else {
      if x > 0 {
        return "positive"
      }
      return "negative"
    }
    x
  }
---
package main

func test(m map[string]string, x int) string {
	x_1, ok := m["a"]
	if !ok {
		if x > 0 {
			return "positive"
		}
		return "negative"
	}
	return x_1
}
