tests/spec/emit/snapshots/map_get_let_else_shadowed_binding_freshens.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(m: Map<string, string>, v: int) -> string {
    let _ = v + 1
    let Some(v) = m.get("a") else {
      return ""
    }
    v
  }
---
package main

func test(m map[string]string, v int) string {
	_ = v + 1
	v_1, ok := m["a"]
	if !ok {
		return ""
	}
	return v_1
}
