tests/spec/emit/snapshots/map_is_empty.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(m: Map<string, int>) -> bool {
    m.is_empty()
  }
---
package main

func test(m map[string]int) bool {
	return len(m) == 0
}
